# Weather-Agent

./: .env.example  .gitignore  Agent.py  CHANGELOG.md  LICENSE  LLm.py  MANIFEST.in  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  test.py
Tools/: Air_Pollution.py  Current_Location.py  Current_Weather.py  Location_Coordinates.py  W3H5D_Forecast.py
codex_weather_agent/: __init__.py  agent.py  config.py  exceptions.py  llm_factory.py  py.typed
codex_weather_agent/tools/: __init__.py  air_pollution.py  coordinates.py  current_location.py  current_weather.py  forecast.py
examples/: basic_usage.py  configuration_examples.py
src/codex_weather_agent/: __init__.py  agent.py  config.py  logging_config.py  state.py  workflow.py
src/codex_weather_agent/llm_providers/: __init__.py  azure.py  base.py  claude.py  factory.py  gemini.py  openai.py
src/codex_weather_agent/tools/: __init__.py  air_pollution.py  current_location.py  current_weather.py  forecast.py  location_coordinates.py
